Revert "feat(rook-ceph): Update values"
This reverts commit dca3bcb9011574739f4298ae014df91729ba14a8.

--- a/kubernetes/main/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/main/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -46,6 +46,10 @@ spec:
         modules:
           - name: pg_autoscaler
             enabled: true
+      network:
+        provider: host
+        connections:
+          requireMsgr2: true
       resources:
         mgr:
           requests:
