--- a/.archive/kubernetes/kube-prometheus-stack/addons/scrapeconfigs/node-exporter.yaml
+++ b/.archive/kubernetes/kube-prometheus-stack/addons/scrapeconfigs/node-exporter.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   staticConfigs:
     - targets:
-        - dns1.greyrock.io:9100
+        - dns.greyrock.io:9100
         - nas.greyrock.io:9100
   metricsPath: /metrics
   relabelings:
