--- a/kubernetes/main/apps/monitoring/victoria-metrics/app/secret-extrascrapes.yaml
+++ b/kubernetes/main/apps/monitoring/victoria-metrics/app/secret-extrascrapes.yaml
@@ -12,13 +12,13 @@ stringData:
       honor_timestamps: true
       static_configs:
         - targets:
-            - dns1.greyrock.io:4000
+            - dns.greyrock.io:4000
     - job_name: node-exporter
       scrape_timeout: 10s
       honor_timestamps: true
       static_configs:
         - targets:
-            - dns1.greyrock.io:9100
+            - dns.greyrock.io:9100
             - nas.greyrock.io:9100
     - job_name: smartctl-exporter
       scrape_interval: 10m
