--- a/kubernetes/main/bootstrap/talos/talenv.sops.yaml
+++ b/kubernetes/main/bootstrap/talos/talenv.sops.yaml
@@ -1,6 +1,6 @@
-clusterName: ENC[AES256_GCM,data:TFd/gQ==,iv:oAo72U69EKrT7sZX5ZEZ2rK7nGY2oyxzXZwJBQFM9BA=,tag:jxJ1lgfRFF4FNL6ukbvSJA==,type:str]
-clusterDNSSuffix: ENC[AES256_GCM,data:NSHfqKSbuyTo3AY=,iv:L41A2iQ3a+jcMkCovDxs80iFOAyrrf7TJ6S94io19os=,tag:QEvvP3Picdqp8M0tsc4QHg==,type:str]
-clusterEndpointIP: ENC[AES256_GCM,data:UL4nGewjnS40,iv:AGVaUQZKntVm9u+mnMtklOrRgwNPqDZWCXelKb6HNEI=,tag:fW88VsNxC61cHWDWMsczlg==,type:str]
+clusterName: ENC[AES256_GCM,data:BFqR7w==,iv:KqepovqOfCsCRL7T7wFGuYAuNRsm9FlihoB/tAJvfPM=,tag:EiJ69QsY/Rox6s+JAmvRxA==,type:str]
+clusterDNSSuffix: ENC[AES256_GCM,data:DEp/ajhpyVnL/k1qRvlb,iv:Eqcp9pGNFxixLQF3/5TqhXFV/6roMz2W6L211G8iGrU=,tag:Jyp8ZPmZmsghI2k71WmmuA==,type:str]
+clusterEndpointIP: ENC[AES256_GCM,data:CCxceRwk1D9d,iv:XJMeDiE37VqchjQTPUo1A3zz4kCFIxN+rB6Xclnxi0k=,tag:HH68Gf16BSNQpVdjMmoNFw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age136uhfkdjvxacd40d9r7guay8a7tqdz9y0264xvxvhvswxwh229lqlwan93
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBiRnczeXdMbUZ5OTRoUGhU
-            ZkRaWGtKN2ZiTG43R2h2TjVROXhLNHZ2ZFFrCkwxNkd4MUJmVGJSajJnVlVrUlkv
-            R2YwRHNZTmNhN1R3SWdoSGlTWFNwOEUKLS0tIFV6eE82d1h4NHJqQmFuOGwzbHNZ
-            UzU1Q3FwTlRCb25IZWFZZTRhVm1NdmsKcDTjKhK7CCwj3GFbmReClpKVDGIX6lzx
-            u9BmJV53n72IBgZUM23vU67FF4mNJxIdiTkUE64CzhSIjuPajX5vlw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBuWFhKR3o0Tk1hdTN5Z2Qx
+            RTM0T2dPTnQ5cDdnejhWTWFweWxVTlEwL2lZCm11NmFpT2pFQyswSW9Jcm9IZkp0
+            WFJPNm9UVTVyUkp4Qngzbzc4M0pVbkEKLS0tIGJyZFE3UHdtTHJKVmEzR0p2OElI
+            OHpQZXR3RkNocUdIMUF3aHM5Y3dna3MKR1jT4113gI5WuoZgifRKS47x2T2vi5aS
+            WEwJFf4LRYvRbYoTU4fZMcvGCVhWPj1qWsgVGfRFVSftNYq0R55fsQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-05-04T13:20:19Z"
-    mac: ENC[AES256_GCM,data:RT1rxqOF8/e3kDCXVBSkflASOZQjVKCAzJhdw4xwImnCBMUtK+Pf9+9V2YptTEdbuT2mVkbw3cr6ZrjgsMMJtsfAr8xEjzUp0wUiMWdEMp7j7UjhgHGE3O0SmdFhsFT/Hnxrk4JAmTh5OqVEbr6Z9FPO7vhg61f139MA3SH93jE=,iv:TOLc5ZbRYPH+Zy5LGJ6rh4MhNaEsvniI0OMvcCrtfbw=,tag:EUWq3FeM6oiJsXOrwD6aVw==,type:str]
+    lastmodified: "2024-05-23T19:06:53Z"
+    mac: ENC[AES256_GCM,data:QXsm8A+n+3aZFra8LgcN3jvitMNmxhfDvHcbSWNv2v2xe3NE1/AKIOWptNSv5Y+4usLl3csHShdKhfRKqD6Mk/ceJm7w6MU3DeR/QczHzxNEIC/FLuOZ8ITZ1ntf04dEI1EaDFWdOCUUWN0G4HwemjQLa5c3dcPl6Rj538sbl4Y=,iv:5G6eI085CitkzSq/XocAtJu8rhP+LaI043pDXXyOjlc=,tag:RNG717bBKvsbh7nNF0AKGQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.8.1
