feat(externaldns): Yeet bind

--- a/kubernetes/main/apps/network/external-dns/internal/externalsecret.yaml
+++ b/kubernetes/main/apps/network/external-dns/internal/externalsecret.yaml
@@ -12,11 +12,7 @@ spec:
     name: externaldns-internal-secrets
     creationPolicy: Owner
   data:
-    - secretKey: bind_rndc_algorithm
+    - secretKey: externaldns_internal_pass
       remoteRef:
-        key: bind
-        property: externaldns_algorithm
-    - secretKey: bind_rndc_secret
-      remoteRef:
-        key: bind
-        property: externaldns_secret
+        key: Unifi Controller
+        property: externaldns_internal
