feat(externaldns): Add probes

--- a/kubernetes/main/apps/network/external-dns/internal/helmrelease.yaml
+++ b/kubernetes/main/apps/network/external-dns/internal/helmrelease.yaml
@@ -41,6 +41,20 @@ spec:
           - name: LOG_LEVEL
             value: debug
 
+        livenessProbe:
+          httpGet:
+            path: /healthz
+            port: http-wh-metrics
+          initialDelaySeconds: 10
+          timeoutSeconds: 5
+
+        readinessProbe:
+          httpGet:
+            path: /readyz
+            port: http-wh-metrics
+          initialDelaySeconds: 10
+          timeoutSeconds: 5
+
     podAnnotations:
       secret.reloader.stakater.com/reload: externaldns-internal-secrets
 
